fixed account page link and z-index on usage

--- a/app/assets/sass/components/_account-usage.scss
+++ b/app/assets/sass/components/_account-usage.scss
@@ -5,7 +5,7 @@
 	width: 260px;
 	padding: 14px 20px;
 	background: $white;
-	z-index: map-get($z-index, map);
+	z-index: 2;
 
 	.account-usage-label {
 		@include font-size(12);
